@@ -27,7 +27,7 @@ module Buildr
     # Runs the build in parallel when true (defaults to false). You can force a parallel build by
     # setting this option directly, or by running the parallel task ahead of the build task.
     #
-    # This option only affects recurvise tasks. For example:
+    # This option only affects recursive tasks. For example:
     #   buildr parallel package
     # will run all package tasks (from the sub-projects) in parallel, but each sub-project's package
     # task runs its child tasks (prepare, compile, resources, etc) in sequence.
@@ -48,7 +48,7 @@ module Buildr
       desc 'Clean files generated during a build'
       Project.local_task('clean') { |name| "Cleaning #{name}" }
 
-      desc 'The default task it build'
+      desc 'The default task is build'
       task 'default'=>'build'
     end
 
@@ -109,9 +109,47 @@ module Buildr
   end
 
 
+  class Svn
+
+    class << self
+      def commit file, message
+        svn 'commit', '-m', message, file
+      end
+      
+      def copy dir, url, message
+        svn 'copy', dir, url, '-m', message
+      end
+      
+      # Return the current SVN URL
+      def repo_url
+        url = svn('info').scan(/URL: (.*)/)[0][0]
+      end
+      
+      def remove url, message
+        svn 'remove', url, '-m', message
+      end
+      
+      # Status check reveals modified files, but also SVN externals which we can safely ignore.
+      def uncommitted_files
+        svn('status', '--ignore-externals').reject { |line| line =~ /^X\s/ }
+      end
+      
+      # :call-seq:
+      #   svn(*args)
+      #
+      # Executes SVN command and returns the output.
+      def svn(*args)
+        cmd = 'svn ' + args.map { |arg| arg[' '] ? %Q{"#{arg}"} : arg }.join(' ')
+        info cmd
+        `#{cmd}`.tap { fail 'SVN command failed' unless $?.exitstatus == 0 }
+      end
+    end
+  end
+  
+  
   class Release
 
-    THIS_VERSION_PATTERN  = /THIS_VERSION|VERSION_NUMBER\s*=\s*(["'])(.*)\1/
+    THIS_VERSION_PATTERN  = /(THIS_VERSION|VERSION_NUMBER)\s*=\s*(["'])(.*)\2/
     NEXT_VERSION_PATTERN  = /NEXT_VERSION\s*=\s*(["'])(.*)\1/
 
     class << self
@@ -122,7 +160,7 @@ module Buildr
       # Make a release.
       def make()
         check
-        version = with_next_version do |filename, version| 
+        version = with_next_version do |filename| 
           options = ['--buildfile', filename, 'DEBUG=no']
           options << '--environment' << Buildr.environment unless Buildr.environment.to_s.empty?
           sh "#{command} _#{Buildr::VERSION}_ clean upload #{options.join(' ')}"
@@ -131,23 +169,55 @@ module Buildr
         commit version + '-SNAPSHOT'
       end
 
-    protected
-
-      def command() #:nodoc:
-        Config::CONFIG['arch'] =~ /dos|win32/i ? $PROGRAM_NAME.ext('cmd') : $PROGRAM_NAME
+      # :call-seq:
+      #   extract_versions(buildfile) => this_version, next_version
+      #
+      # Extract the current and next version numbers from a buildfile.
+      # Raise an error if not found.
+      def extract_versions buildfile
+        begin
+          this_version = buildfile.scan(THIS_VERSION_PATTERN)[0][2]
+        rescue
+          fail 'Looking for THIS_VERSION = "..." in your Buildfile, none found'
+        end
+        begin
+          next_version = buildfile.scan(NEXT_VERSION_PATTERN)[0][1]
+        rescue
+          fail 'Looking for NEXT_VERSION = "..." in your Buildfile, none found'
+        end
+        [this_version, next_version]
       end
-
+      
+      # :call-seq:
+      #   tag_url(svn_url, version) => tag_url
+      #
+      # Returns the SVN url for the tag.
+      # Can tag from the trunk or from branches.
+      # Can handle the two standard repository layouts.
+      #   - http://my.repo/foo/trunk => http://my.repo/foo/tags/1.0.0
+      #   - http://my.repo/trunk/foo => http://my.repo/tags/foo/1.0.0
+      def tag_url svn_url, version
+        trunk_or_branches = Regexp.union(%r{^(.*)/trunk(.*)$}, %r{^(.*)/branches(.*)/([^/]*)$})
+        match = trunk_or_branches.match(svn_url)
+        prefix = match[1] || match[3]
+        suffix = match[2] || match[4]
+        prefix + '/tags' + suffix + '/' + version
+      end
+      
       # :call-seq:
       #   check()
       #
       # Check that we don't have any local changes in the working copy. Fails if it finds anything
       # in the working copy that is not checked into source control.
       def check()
-        fail "SVN URL must end with 'trunk' or 'branches/...'" unless svn_url =~ /(trunk)|(branches.*)$/
-        # Status check reveals modified file, but also SVN externals which we can safely ignore.
-        status = svn('status', '--ignore-externals').reject { |line| line =~ /^X\s/ }
-        fail "Uncommitted SVN files violate the First Principle Of Release!\n#{status}" unless
-          status.empty?
+        fail "SVN URL must contain 'trunk' or 'branches/...'" unless Svn.repo_url =~ /(trunk)|(branches.*)$/
+        fail "Uncommitted SVN files violate the First Principle Of Release!\n#{Svn.uncommitted_files}" unless Svn.uncommitted_files.empty?
+      end
+
+    protected
+
+      def command() #:nodoc:
+        Config::CONFIG['arch'] =~ /dos|win32/i ? $PROGRAM_NAME.ext('cmd') : $PROGRAM_NAME
       end
 
       # :call-seq:
@@ -170,7 +240,7 @@ module Buildr
       #   NEXT_VERSION = 1.2.1
       # and the method will return 1.2.0.
       def with_next_version()
-        new_filename = Buildr.application.buildfile + '.next'
+        new_filename = Buildr.application.buildfile.to_s + '.next'
         modified = change_version do |this_version, next_version|
           one_after = next_version.split('.')
           one_after[-1] = one_after[-1].to_i + 1
@@ -179,11 +249,11 @@ module Buildr
         File.open(new_filename, 'w') { |file| file.write modified }
         begin
           yield new_filename
-          mv new_filename, Buildr.application.buildfile
+          mv new_filename, Buildr.application.buildfile.to_s
         ensure
           rm new_filename rescue nil
         end
-        File.read(Buildr.application.buildfile).scan(THIS_VERSION_PATTERN)[0][1]
+        extract_versions(File.read(Buildr.application.buildfile.to_s))[0]
       end
 
       # :call-seq:
@@ -195,11 +265,8 @@ module Buildr
       # This method yields to the block with the current (this) and next version numbers and expects
       # an array with the new this and next version numbers.
       def change_version()
-        buildfile = File.read(Buildr.application.buildfile)
-        this_version = buildfile.scan(THIS_VERSION_PATTERN)[0][1] or
-          fail "Looking for THIS_VERSION = \"...\" in your Buildfile, none found"
-        next_version = buildfile.scan(NEXT_VERSION_PATTERN)[0][1] or
-          fail "Looking for NEXT_VERSION = \"...\" in your Buildfile, none found"
+        buildfile = File.read(Buildr.application.buildfile.to_s)
+        this_version, next_version = extract_versions buildfile
         this_version, next_version = yield(this_version, next_version)
         if verbose
           puts 'Upgrading version numbers:'
@@ -215,9 +282,9 @@ module Buildr
       #
       # Tags the current working copy with the release version number.
       def tag(version)
-        url = svn_url.sub(/(trunk$)|(branches.*)$/, "tags/#{version}")
-        svn 'remove', url, '-m', 'Removing old copy' rescue nil
-        svn 'copy', Dir.pwd, url, '-m', "Release #{version}"
+        url = tag_url Svn.repo_url, version
+        Svn.remove url, 'Removing old copy' rescue nil
+        Svn.copy Dir.pwd, url, "Release #{version}"
       end
 
       # :call-seq:
@@ -225,30 +292,15 @@ module Buildr
       #
       # Last, we commit what we currently have in the working copy.
       def commit(version)
-        buildfile = File.read(Buildr.application.buildfile).
+        buildfile = File.read(Buildr.application.buildfile.to_s).
           gsub(THIS_VERSION_PATTERN) { |ver| ver.sub(/(["']).*\1/, %Q{"#{version}"}) }
-        File.open(Buildr.application.buildfile, 'w') { |file| file.write buildfile }
-        svn 'commit', '-m', "Changed version number to #{version}", Buildr.application.buildfile
-      end
-
-      # :call-seq:
-      #   svn(*args)
-      #
-      # Executes SVN command and returns the output.
-      def svn(*args)
-        cmd = 'svn ' + args.map { |arg| arg[' '] ? %Q{"#{arg}"} : arg }.join(' ')
-        info cmd
-        `#{cmd}`.tap { fail 'SVN command failed' unless $?.exitstatus == 0 }
-      end
-
-      # Return the current SVN URL
-      def svn_url
-        url = svn('info').scan(/URL: (.*)/)[0][0]
+        File.open(Buildr.application.buildfile.to_s, 'w') { |file| file.write buildfile }
+        Svn.commit Buildr.application.buildfile.to_s, "Changed version number to #{version}"
       end
     end
-
   end
 
+  
   desc 'Make a release'
   task 'release' do |task|
     Release.make
